macros/tests/ui/fail_check_invalid_sql.rs
use surql_macros::surql_check;

fn main() {
	let _ = surql_check!("SELEC * FORM user");
}
